--- a/public/assets/css/theme_style.css
+++ b/public/assets/css/theme_style.css
@@ -6730,3 +6730,11 @@ th>.rt-radio.rt-radio-single {
 .mat-card:not([class*=mat-elevation-z]) {
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
+.textinputfields {
+    border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-size: 14px;
+	padding: 7px 10px;
+	width: 310px;
+}
