--- a/public/assets/css/theme_style.css
+++ b/public/assets/css/theme_style.css
@@ -6738,6 +6738,14 @@ th>.rt-radio.rt-radio-single {
 	padding: 7px 10px;
 	width: 310px;
 }
+.textinputmobilefields {
+    border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-size: 14px;
+	padding: 7px 10px;
+	width: 310px;
+}
 .verifiedsuccess{
 color:#14E91E;
 }
@@ -6746,4 +6754,10 @@ color:#FF0000;
 }
 .wid75{
 width:310px;
+}
+.navigationtabs{
+    list-style: none;
+    padding: 0;
+    width: 400px;
+    margin: 15px auto;
 }
