--- a/assets/css/neon-forms.css
+++ b/assets/css/neon-forms.css
@@ -23,6 +23,7 @@
     margin: 10px 0!important;">
 
 }
+
 .has-switch {
   display: inline-block;
   cursor: pointer;
@@ -1729,6 +1730,7 @@ figure {
 p {
   margin: 0 0 8.5px;
   font-size: 12px;
+  color: red;
 }
 .lead {
   margin-bottom: 17px;
@@ -2377,6 +2379,7 @@ legend {
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
+
 label {
   display: inline-block;
   margin-bottom: 5px;
