--- a/assets/css/neon-core.css
+++ b/assets/css/neon-core.css
@@ -2753,7 +2753,7 @@ input[type="button"].btn-block {
 }
 .page-container .sidebar-menu {
   position: absolute;
-  width: 280px;
+  width: 261px;
   top: 0;
   left: 0;
   bottom: 0;
@@ -3230,7 +3230,7 @@ input[type="button"].btn-block {
   position: relative;
   float: left;
   width: 100%;
-  padding: 6px 16px;
+  padding: 6px 0px;
   z-index: 2;
   background: #ffffff;
   -webkit-box-sizing: border-box;
@@ -6166,13 +6166,19 @@ textarea.dataTables_wrapper .dataTables_filter > label input {
 .dataTables_wrapper .dataTables_paginate.dataTables_paginate .pagination {
   margin: 0;
 }
-@media (max-width: 992px) {
+/*@media (max-width: 992px) {
    .dataTables_wrapper .export-data {
   position: absolute;
   right: 250px;
   top: 13px;
 }
+}*/
+.dataTables_wrapper .export-data {
+  position: absolute;
+  right: 250px;
+  top: 13px;
 }
+
 @media screen and (max-width: 600px) {
   div.export-data {
     display: none;
