--- a/assets/css/neon-forms.css
+++ b/assets/css/neon-forms.css
@@ -2137,6 +2137,7 @@ th {
 .table > colgroup + thead > tr:first-child > td,
 .table > thead:first-child > tr:first-child > td {
   border-top: 0;
+  background-color: #d4d3d380;
 }
 .table > tbody + tbody {
   border-top: 2px solid #ebebeb;
@@ -2167,7 +2168,7 @@ th {
 .table-bordered > thead > tr > td {
   background-color: #f5f5f6;
   border-bottom-width: 1px;
-  color: #365951;
+  color: #000000;
 }
 .table-bordered > tfoot > tr > th,
 .table-bordered > tfoot > tr > td {
@@ -3893,6 +3894,7 @@ fieldset[disabled] .btn-warning.active {
   border-radius: 2px;
 }
 .btn-danger {
+  font-size:12px;
   color: #ffffff;
   background-color: #cc2424;
   border-color: #cc2424;
@@ -4014,6 +4016,7 @@ fieldset[disabled] .btn-danger.active {
 }
 .btn-success,
 .btn-green {
+  font-size:12px;
   color: #ffffff;
   background-color: #00a651;
   border-color: #00a651;
