--- a/assets/css/neon-core.css
+++ b/assets/css/neon-core.css
@@ -40,6 +40,9 @@ a:focus {
 img {
   vertical-align: middle;
 }
+.row{
+  margin-bottom: 50px;
+}
 a.hiper{
   color:#337ab7;
 }
@@ -2835,7 +2838,7 @@ input[type="button"].btn-block {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 20px;
+  margin-bottom: 51px;
 }
 .page-container .sidebar-menu #main-menu li {
   position: relative;
@@ -6716,7 +6719,7 @@ textareatable .replace-inputs input {
   z-index: 1;
 }
 .tile-stats .icon i {
-  font-size: 100px;
+  font-size: 0px;
   line-height: 0;
   margin: 0;
   padding: 0;
@@ -6738,7 +6741,7 @@ textareatable .replace-inputs input {
   padding: 0;
 }
 .tile-stats .num {
-  font-size: 38px;
+  font-size: 45px;
   font-weight: bold;
 }
 .tile-stats h3 {
