--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -122,7 +122,7 @@ html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 button[disabled],
 html input[disabled] {
