--- a/assets/css/neon-forms.css
+++ b/assets/css/neon-forms.css
@@ -1553,7 +1553,7 @@ button.toast-close-button {
   box-sizing: border-box;
 }
 #toast-container > div {
-  margin: 0 0 6px;
+  margin: 50px 0 6px;
   padding: 15px 15px 15px 50px;
   width: 300px;
   -moz-border-radius: 3px;
@@ -1628,7 +1628,7 @@ button.toast-close-button {
 }
 @media all and (min-width: 241px) and (max-width: 480px) {
   #toast-container > div {
-    padding: 8px 8px 8px 50px;
+    padding: 8px 6px 8px 50px;
     width: 18em;
   }
   #toast-container .toast-close-button {
