Individual and group Message combined in one message

--- a/assets/css/neon-core.css
+++ b/assets/css/neon-core.css
@@ -2763,7 +2763,7 @@ input[type="button"].btn-block {
   top: 0;
   left: 0;
   bottom: 0;
-  background: #1b97ce;
+  background: #263238/*#1b97ce*/;
   color: #aaabae;
   z-index: 1;
   -webkit-box-sizing: border-box;
