--- a/assets/css/neon-core.css
+++ b/assets/css/neon-core.css
@@ -2845,7 +2845,7 @@ input[type="button"].btn-block {
   position: relative;
   margin: 0;
   font-size: 12px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+  border-bottom: 1px solid rgba(21, 20, 20, 0.7);/*1px solid rgba(255, 255, 255, 0.7)*/
 }
 .page-container .sidebar-menu #main-menu li#search {
   background: #262b34;
