--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5156,7 +5156,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  /*background-color: #eeeeee;*/
 }
 .nav > li.disabled > a {
   color: #999999;
