Review inputs and reports handling

--- a/assets/backend/css/styles.css
+++ b/assets/backend/css/styles.css
@@ -729,8 +729,8 @@ f
   padding: 0; }
 
 .nav-tabs {
-  background: #c8c8c8;
-  border: 1px solid; }
+ /* background: #c8c8c8;
+  border: 1px solid;*/ }
 
 .nav-tabs li a:hover {
   background: #fff; }
