--- a/assets/backend/css/theme-midnight.css
+++ b/assets/backend/css/theme-midnight.css
@@ -38,7 +38,7 @@ a, a:hover, a:focus {
   background-color: #3a75fb; }
 
 .panel-primary > .panel-heading {
-  background-color: #3a75fb; }
+  background-color: #c2c2c2; }
 
 .timeline-badge.primary {
   background-color: #3a75fb !important; }
