--- a/assets/backend/css/styles.css
+++ b/assets/backend/css/styles.css
@@ -166,7 +166,8 @@ ul.nav.menu li{
 .dropdown-messages {
   border: 1px solid #fff;
   width: 360px;
-  background: rgba(255, 255, 255, 0.9);
+  min-height: 90px;
+  background: #fff;/*rgba(255, 255, 255, 0.9)*/
   color: #444;
   font-size: 0.9em; }
 
@@ -175,9 +176,9 @@ ul.nav.menu li{
   float: left; }
 
 .dropdown-messages .message-body {
-  margin: 5px;
+  margin: 2px;
   float: left;
-  width: 340px; }
+  width: 335px; }
 
 .dropdown small {
   color: #999; }
@@ -476,7 +477,7 @@ f
   margin-top: -6px;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 0.8em; }
+  font-size: 1em; }
 
 .panel-widget .large {
   color: #373b45;
