--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -1,4 +1,4 @@
-/*
+
 Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -606,6 +606,288 @@ button.btn.btn-link:hover{
     margin-top: 0.8em;
     color: #000;
 }
+/*Front*/
+span.icon-trans {
+  position: absolute;
+  font-size: 21.5em;
+  color: rgba(228, 228, 228, 0.25);
+  left: 0%;
+  top: -8%;
+  font-weight: 800;
+  z-index: 0;
+}
+
+span.letter-02 {
+  top: -18%;
+  right: 0;
+  display: block;
+  position: absolute;
+  font-size: 41em;
+  font-weight: 800;
+  color: rgba(41, 170, 227, 0.1);
+  z-index: -1;
+}
+
+#services,
+#pricing {
+  background: #29aae3;
+}
+
+h4.sec-title {
+  margin: 1.2em 0;
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: 600;
+  font-size: 1.2em;
+}
+
+h4.sec-title1 {
+  margin: 0 1.2em;
+  text-transform: uppercase;
+  color: #000;
+  font-size: 1.5em;
+}
+
+.agileits-services-grids i {
+  font-size: 4em;
+  background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  background: radial-gradient(circle at 33% 100%, #021b79 4%, #0575e6 30%, #021b79 62%, #0575e6 85%, #000000);
+  -webkit-background-clip: text;
+  background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  background: radial-gradient(circle at 33% 100%, #021b79 4%, #0575e6 30%, #021b79 62%, #0575e6 85%, #000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+}
+
+.agileits-services-grids p {
+  color: #8c8c8c;
+}
+
+.agileits-services-grids span {
+  width: 70px;
+  height: 1px;
+  background: #2d2d2d;
+  display: block;
+  margin-bottom: 1em;
+}
+
+.agileits-services-grids {
+  background: #fff;
+  padding: 2em;
+}
+
+a.service-btn {
+  background: #77bce7;
+  color: #fff;
+  font-size: 12px;
+  text-transform: capitalize;
+  padding: 6px 15px;
+  display: inline-block;
+  margin: 10px 0 0;
+  border-radius: 5px;
+  letter-spacing: 1px;
+}
+
+/*-- //services --*/
+/* process */
+
+h4.sec-title1.flow-odd {
+    margin-right: 7em;
+    margin-left: 0;
+}
+
+span.process-circle {
+    display: block;
+    background: #044bb4;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 5px solid #dce0e1;
+}
+
+.process-direction {
+    position: absolute;
+    border-top: 3px dotted #4bafe8;
+    transform: rotate(115deg);
+    left: -62%;
+    width: 91%;
+    top: 253px;
+}
+
+.process-direction2 {
+    position: absolute;
+    border-top: 3px dotted #4bafe8;
+    transform: rotate(64deg);
+    left: -61%;
+    width: 90%;
+    top: -234px;
+}
+
+ul.partners-icon li i {
+    font-size: 9em;
+    color: #777;
+    background: #FED373;
+    background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+    background: radial-gradient(circle at 33% 100%, #021b79 4%, #0575e6 30%, #021b79 62%, #0575e6 85%, #000000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+ul.partners-icon li {
+    display: inline-block;
+    margin: 0 2em;
+}
+
+.process-direction-last {
+    position: absolute;
+    border-top: 3px dotted #4bafe8;
+    transform: rotate(115deg);
+    left: 39%;
+    width: 91%;
+    top: -237px;
+}
+
+/* //process */
+/* pricing tables */
+
+span.h6.w-60.mx-auto.px-4.py-1.rounded-bottom.btn-theme.text-white.shadow-sm {
+  font-size: 20px;
+}
+
+h6.text-primary {
+  font-size: 2em;
+}
+
+.card-deck .card {
+  border: 3px solid transparent;
+}
+
+.card.card-pricing.text-center.px-3.mb-4:hover {
+  border: 3px solid #044bb4;
+}
+
+.card-pricing.popular {
+  z-index: 1;
+  border: 3px solid #044bb4;
+}
+
+.card-pricing .list-unstyled li {
+  padding: .5rem 0;
+  color: #6c757d;
+}
+
+.btn-theme {
+  background-color: #044bb4;
+}
+
+.card.card-pricing:nth-child(2),
+.card.card-pricing:nth-child(3) {
+  margin-top: 3em;
+}
+
+.btn-change5 {
+  width: 100%;
+  border: 0px;
+  background: #29aae3;
+  font-size: 13px;
+  letter-spacing: 1px;
+  padding: 10px 0;
+  color: #fff;
+  font-weight: 500;
+  text-transform: uppercase;
+  box-shadow: 0 0 1px #ccc;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-transition-duration: 0.5s;
+  /* -webkit-transition-timing-function: ease-out; */
+  -webkit-box-shadow: 50px 0px 0 0 #29aae3 inset, -50px 0px 0 #29aae3 inset;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.btn-change5:hover {
+  -webkit-box-shadow: 0px 0px 0 0 #044bb4 inset, 0px 0px 0 #044bb4 inset;
+}
+
+.btn-outline-secondary:hover {
+  color: #044bb4;
+  background-color: #fff;
+}
+
+ul.social-iconsv2 li {
+  display: inline-block;
+  margin-right: 6px;
+  border-radius: 50%;
+}
+
+ul.social-iconsv2 li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #fff;
+}
+
+ul.social-iconsv2 li a i.fab {
+  font-size: 15px;
+  line-height: 38px;
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  text-align: center;
+  background-color: transparent;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+}
+
+ul.social-iconsv2 li:first-child {
+  background: #3b5998;
+  color: #fff;
+}
+
+ul.social-iconsv2 li:last-child {
+  background: #287bbc;
+  color: #000;
+}
+
+ul.social-iconsv2 li:nth-child(3) {
+  background: #dd4b39;
+  color: #000;
+}
+
+ul.social-iconsv2 li a i.fab:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+ul.social-iconsv2 li:nth-child(2) {
+  background: #1da1f2;
+  color: #000;
+}
+
+ul.social-iconsv2 li a:hover {
+  color: #fff;
+}
+/*Contact*/
+div#contact {
+    background: #eee;
+}
+/*/Contact*/
+#toTop {
+    display: none;
+    text-decoration: none;
+    position: fixed;
+    bottom: 24px;
+    right: 3%;
+    overflow: hidden;
+    z-index: 999;
+    width: 32px;
+    height: 32px;
+    border: none;
+    text-indent: 100%;
+    background: url(../images/move-top.png) no-repeat 0px 0px;
+}
+/*/front*/
 section.stats h4 {
     font-size: 40px;
     width: 65%;
@@ -2091,4 +2373,4 @@ p.card-text {
 }
 }
 
-/* -- //Responsive code -- */
+/* -- //Responsive code -- 
